@@ -1063,6 +1063,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12258. Need translate java.nio.file.NoSuchFileException to
     FileNotFoundException to avoid regression. (Zhihai Xu via cnauroth)
 
+    HADOOP-12322. typos in rpcmetrics.java. (Anu Engineer via
+    Arpit Agarwal)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
